cv-test/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cv-test-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: cv-test.siig.tech
    http:
      paths:
      - backend:
         serviceName: cv-test-svc
         servicePort: 80
        path: /
  tls:
  - hosts:
    - cv-test.siig.tech
    secretName: ssl-cert cv-test.siig.tech
  secretName: ssl-cert
